--- a/blog.html
+++ b/blog.html
@@ -26,7 +26,7 @@
             <ul class="nav-links">
                 <li><a href="./about.html" class="nav-link-item">About</a></li>
                 <li class="nav-item-dropdown">
-                    <a href="#" class="nav-link-item nav-link-with-arrow">Conditions</a>
+                    <a href="./conditions.html" class="nav-link-item nav-link-with-arrow">Conditions</a>
                     <ul class="dropdown-menu">
                         <li class="dropdown-item-has-children">
                             <a href="#">Back Pain</a><a href="#">Neck Pain</a><a href="#">Shoulder Pain</a><a href="#">Sciatica</a><a href="#">Bulging Disc</a><a href="#">Migraine</a><a href="#">Chiropractor</a><a href="#">Pinched Nerve</a><a href="#">View More Conditions</a>
@@ -67,98 +67,12 @@
     </header>
 
     <main>
-        <section class="blog-hero" aria-label="Blog">
-            <p class="blog-hero-subtitle">Integrated Healthcare & Chiropractic Treatment in the South Bay, Los Angeles</p>
-            <h1 class="blog-hero-title">Stay up to date with the latest updates in treating pain & living a better life!</h1>
-            <p class="blog-hero-desc">Learn how specific conditions can be treated by our Chiropractic health and wellness practice, and how you can better care for yourself each and every day.</p>
-            <nav class="blog-breadcrumb" aria-label="Breadcrumb">
-                <a href="./index.html">Home</a> / Blog
-            </nav>
-        </section>
-
-        <section class="blog-listing">
-            <div class="blog-grid">
-                <article class="blog-card">
-                    <div class="blog-card-image-wrap">
-                        <img src="./assets/images/home-hero-bg.jpg" alt="">
-                        <span class="blog-card-category">Uncategorized</span>
-                    </div>
-                    <div class="blog-card-body">
-                        <h2 class="blog-card-title"><a href="./blog-detail.html">The Importance of Spinal Alignment in Preventing Chronic Pain: A Chiropractor's Guide</a></h2>
-                        <p class="blog-card-excerpt">Chronic pain often stems from misalignments in the spine. Learn how proper spinal alignment can help prevent long-term discomfort and improve your overall quality of life.</p>
-                        <a href="./blog-detail.html" class="blog-card-readmore">Read More &gt;</a>
-                        <div class="blog-card-footer">Will Carpenter • February 9, 2026</div>
-                    </div>
-                </article>
-                <article class="blog-card">
-                    <div class="blog-card-image-wrap">
-                        <img src="./assets/images/home-hero-bg.jpg" alt="">
-                        <span class="blog-card-category">Uncategorized</span>
-                    </div>
-                    <div class="blog-card-body">
-                        <h2 class="blog-card-title"><a href="./blog-detail.html">How Chiropractic Care Helps with Long-Term Back Pain Relief Without Medication</a></h2>
-                        <p class="blog-card-excerpt">Discover how chiropractic care offers effective, drug-free solutions for back pain and supports lasting relief through targeted adjustments and lifestyle guidance.</p>
-                        <a href="./blog-detail.html" class="blog-card-readmore">Read More &gt;</a>
-                        <div class="blog-card-footer">Will Carpenter • February 5, 2026</div>
-                    </div>
-                </article>
-                <article class="blog-card">
-                    <div class="blog-card-image-wrap">
-                        <img src="./assets/images/home-hero-bg.jpg" alt="">
-                        <span class="blog-card-category">General</span>
-                    </div>
-                    <div class="blog-card-body">
-                        <h2 class="blog-card-title"><a href="./blog-detail.html">Why Prenatal Chiropractic Care is a Game Changer</a></h2>
-                        <p class="blog-card-excerpt">Prenatal chiropractic care can ease pregnancy discomfort and support a healthier delivery. Here's what expectant mothers should know.</p>
-                        <a href="./blog-detail.html" class="blog-card-readmore">Read More &gt;</a>
-                        <div class="blog-card-footer">Will Carpenter • February 4, 2026</div>
-                    </div>
-                </article>
-                <article class="blog-card">
-                    <div class="blog-card-image-wrap">
-                        <img src="./assets/images/home-hero-bg.jpg" alt="">
-                        <span class="blog-card-category">Uncategorized</span>
-                    </div>
-                    <div class="blog-card-body">
-                        <h2 class="blog-card-title"><a href="./blog-detail.html">What Are Spinal Adjustments and How Do They Work?</a></h2>
-                        <p class="blog-card-excerpt">Spinal adjustments are a core part of chiropractic care. We break down what they are, how they work, and when they might help you.</p>
-                        <a href="./blog-detail.html" class="blog-card-readmore">Read More &gt;</a>
-                        <div class="blog-card-footer">Will Carpenter • January 28, 2026</div>
-                    </div>
-                </article>
-                <article class="blog-card">
-                    <div class="blog-card-image-wrap">
-                        <img src="./assets/images/home-hero-bg.jpg" alt="">
-                        <span class="blog-card-category">Uncategorized</span>
-                    </div>
-                    <div class="blog-card-body">
-                        <h2 class="blog-card-title"><a href="./blog-detail.html">Take Action Toward Long-Term Back Pain Relief Today</a></h2>
-                        <p class="blog-card-excerpt">Don't let back pain hold you back. Learn practical steps you can take today to move toward lasting relief with the support of our team.</p>
-                        <a href="./blog-detail.html" class="blog-card-readmore">Read More &gt;</a>
-                        <div class="blog-card-footer">Will Carpenter • January 20, 2026</div>
-                    </div>
-                </article>
-                <article class="blog-card">
-                    <div class="blog-card-image-wrap">
-                        <img src="./assets/images/home-hero-bg.jpg" alt="">
-                        <span class="blog-card-category">General</span>
-                    </div>
-                    <div class="blog-card-body">
-                        <h2 class="blog-card-title"><a href="./blog-detail.html">The Importance of Spinal Alignment in Preventing Chronic Pain: A Chiropractor's Guide</a></h2>
-                        <p class="blog-card-excerpt">Chronic joint pain, whether due to arthritis, sports injuries, or general wear and tear, can significantly impact your daily life. Traditional treatments like pain medications may offer temporary relief, but many patients seek longer-term solutions.</p>
-                        <a href="./blog-detail.html" class="blog-card-readmore">Read More &gt;</a>
-                        <div class="blog-card-footer">Will Carpenter • January 15, 2026</div>
-                    </div>
-                </article>
-            </div>
-            <nav class="blog-pagination" aria-label="Blog pagination">
-                <span aria-disabled="true">&#171; Previous</span>
-                <span class="blog-pagination-current">1</span>
-                <a href="./blog.html?page=2">2</a>
-                <a href="./blog.html?page=3">3</a>
-                <a href="./blog.html?page=4">4</a>
-                <a href="./blog.html?page=5">5</a>
-                <a href="./blog.html?page=2">Next &#187;</a>
+        <section class="blogs-hero" aria-label="blogs">
+            <h1 class="blogs-hero-title">Goodlife Blog coming soon</h1>
+            <nav class="blogs-breadcrumb" aria-label="Breadcrumb">
+                <a href="./index.html">Home</a>
+                <span class="blogs-breadcrumb-sep">/</span>
+                <span>Blogs</span>
             </nav>
         </section>
     </main>
