--- a/blog-detail.html
+++ b/blog-detail.html
@@ -26,7 +26,7 @@
             <ul class="nav-links">
                 <li><a href="./about.html" class="nav-link-item">About</a></li>
                 <li class="nav-item-dropdown">
-                    <a href="#" class="nav-link-item nav-link-with-arrow">Conditions</a>
+                    <a href="./conditions.html" class="nav-link-item nav-link-with-arrow">Conditions</a>
                     <ul class="dropdown-menu">
                         <li class="dropdown-item-has-children">
                             <a href="#">Back Pain</a><a href="#">Neck Pain</a><a href="#">Shoulder Pain</a><a href="#">Sciatica</a><a href="#">Bulging Disc</a><a href="#">Migraine</a><a href="#">Chiropractor</a><a href="#">Pinched Nerve</a><a href="#">View More Conditions</a>
