--- a/new-patient.html
+++ b/new-patient.html
@@ -36,7 +36,7 @@
             <ul class="nav-links">
                 <li><a href="./about.html" class="nav-link-item">About</a></li>
                 <li class="nav-item-dropdown">
-                    <a href="#" class="nav-link-item nav-link-with-arrow">Conditions</a>
+                    <a href="./conditions.html" class="nav-link-item nav-link-with-arrow">Conditions</a>
                     <ul class="dropdown-menu">
                         <li class="dropdown-item-has-children">
                             <a href="#">Back Pain</a>
