--- a/conditions.html
+++ b/conditions.html
@@ -166,7 +166,7 @@
                 <h2 class="conditions-cta-headline">See How We Can Help You Today!</h2>
                 <div class="conditions-cta-buttons">
                     <a href="#" class="conditions-cta-btn"><i class="fa fa-calendar" aria-hidden="true"></i> Request a Consultation</a>
-                    <a href="tel:636-492-1528" class="conditions-cta-btn"><i class="fa fa-phone" aria-hidden="true"></i> 636-492-1528</a>
+                    <a href="tel:636-492-1528" class="conditions-cta-btn"><i class="fa fa-phone" aria-hidden="true"></i> Call Us</a>
                 </div>
             </div>
         </section>
