--- a/blog.html
+++ b/blog.html
@@ -27,11 +27,17 @@
                 <li><a href="./about.html" class="nav-link-item">About</a></li>
                 <li class="nav-item-dropdown">
                     <a href="./conditions.html" class="nav-link-item nav-link-with-arrow">Conditions</a>
-                    <ul class="dropdown-menu">
-                        <li class="dropdown-item-has-children">
-                            <a href="#">Back Pain</a><a href="#">Neck Pain</a><a href="#">Shoulder Pain</a><a href="#">Sciatica</a><a href="#">Bulging Disc</a><a href="#">Migraine</a><a href="#">Chiropractor</a><a href="#">Pinched Nerve</a><a href="#">View More Conditions</a>
-                        </li>
-                    </ul>
+<ul class="dropdown-menu">
+                    <li class="dropdown-item-has-children">
+                        <a href="./conditions/headaches.html">Migraine</a>
+                        <a href="./conditions/back-pain.html">Back Pain</a>
+                        <a href="./conditions/joint-pain.html">Joint Pain</a>
+                        <a href="./conditions/neck-pain.html">Neck Pain</a>
+                        <a href="./conditions/nerve-pain.html">Nerve Pain</a>
+                        <a href="#">Personal Injuries</a>
+                        <a href="./conditions.html">View More Conditions</a>
+                    </li>
+                </ul>
                 </li>
                 <li class="nav-item-dropdown">
                     <a href="#" class="nav-link-item nav-link-with-arrow">Services</a>
