--- a/conditions.html
+++ b/conditions.html
@@ -32,7 +32,13 @@
                     <a href="./conditions.html" class="nav-link-item nav-link-with-arrow">Conditions</a>
                     <ul class="dropdown-menu">
                         <li class="dropdown-item-has-children">
-                            <a href="./conditions.html#back-pain">Back Pain</a><a href="./conditions.html#neck-pain">Neck Pain</a><a href="./conditions.html#shoulder-pain">Shoulder Pain</a><a href="./conditions.html#sciatica">Sciatica</a><a href="./conditions.html#bulging-disc">Bulging Disc</a><a href="./conditions.html#headaches">Migraine</a><a href="./conditions.html#chiropractor">Chiropractor</a><a href="./conditions.html#pinched-nerve">Pinched Nerve</a><a href="./conditions.html">View More Conditions</a>
+                            <a href="./conditions/headaches.html">Migraine</a>
+                            <a href="./conditions/back-pain.html">Back Pain</a>
+                            <a href="./conditions/joint-pain.html">Joint Pain</a>
+                            <a href="./conditions/neck-pain.html">Neck Pain</a>
+                            <a href="./conditions/nerve-pain.html">Nerve Pain</a>
+                            <a href="#">Personal Injuries</a>
+                            <a href="./conditions.html">View More Conditions</a>
                         </li>
                     </ul>
                 </li>
@@ -108,53 +114,47 @@
         <section class="conditions-grid-section" aria-labelledby="conditions-heading">
             <div class="conditions-inner">
                 <div class="conditions-grid" id="conditions-heading">
-                    <a href="#" class="condition-card" id="back-pain">
+                    <a href="./conditions/headaches.html" class="condition-card" id="headaches">
                         <span class="condition-circle">
-                            <img src="./assets/images/Conditions/lower-back-pain.webp" alt="" class="condition-img" width="200" height="200">
-                        </span>
-                        <span class="condition-label">Back Pain</span>
-                    </a>
-                    <a href="#" class="condition-card" id="knee-pain">
-                        <span class="condition-circle">
-                            <img src="./assets/images/Conditions/athlete-with-knee-pain.webp" alt="" class="condition-img" width="200" height="200">
-                        </span>
-                        <span class="condition-label">Knee Pain</span>
-                    </a>
-                    <a href="#" class="condition-card" id="neuropathy">
-                        <span class="condition-circle">
-                            <img src="./assets/images/Conditions/neuropathy-pain-300x296.webp" alt="" class="condition-img" width="200" height="200">
-                        </span>
-                        <span class="condition-label">Neuropathy</span>
-                    </a>
-                    <a href="#" class="condition-card" id="headaches">
-                        <span class="condition-circle">
-                            <img src="./assets/images/Conditions/man-experiencing-headache.webp" alt="" class="condition-img" width="200" height="200">
+                            <img src="./assets/images/Conditions/man-experiencing-headache.webp" alt=""
+                                class="condition-img" width="200" height="200">
                         </span>
                         <span class="condition-label">Headaches</span>
                     </a>
-                    <a href="#" class="condition-card" id="joint-pain">
+                    <a href="./conditions/back-pain.html" class="condition-card" id="back-pain">
                         <span class="condition-circle">
-                            <img src="./assets/images/Conditions/joint-pain.webp" alt="" class="condition-img" width="200" height="200">
+                            <img src="./assets/images/Conditions/lower-back-pain.webp" alt="" class="condition-img"
+                                width="200" height="200">
+                        </span>
+                        <span class="condition-label">Back Pain</span>
+                    </a>
+                    <a href="./conditions/joint-pain.html" class="condition-card" id="joint-pain">
+                        <span class="condition-circle">
+                            <img src="./assets/images/Conditions/joint-pain.webp" alt="" class="condition-img"
+                                width="200" height="200">
                         </span>
                         <span class="condition-label">Joint Pain</span>
                     </a>
-                    <a href="#" class="condition-card" id="nerve-pain">
+                    <a href="./conditions/neck-pain.html" class="condition-card" id="knee-pain">
                         <span class="condition-circle">
-                            <img src="./assets/images/Conditions/nerve-pain-image-300x296.webp" alt="" class="condition-img" width="200" height="200">
+                            <img src="./assets/images/Conditions/neck-pain.jpg" alt=""
+                                class="condition-img" width="200" height="200">
+                        </span>
+                        <span class="condition-label">Neck Pain</span>
+                    </a>
+                    <a href="./conditions/nerve-pain.html" class="condition-card" id="nerve-pain">
+                        <span class="condition-circle">
+                            <img src="./assets/images/Conditions/nerve-pain-image-300x296.webp" alt=""
+                                class="condition-img" width="200" height="200">
                         </span>
                         <span class="condition-label">Nerve Pain</span>
                     </a>
-                    <a href="#" class="condition-card" id="sports-injuries">
-                        <span class="condition-circle">
-                            <img src="./assets/images/Conditions/sport-injury-pain-300x296.webp" alt="" class="condition-img" width="200" height="200">
-                        </span>
-                        <span class="condition-label">Sports Injuries</span>
-                    </a>
                     <a href="#" class="condition-card" id="work-injuries">
                         <span class="condition-circle">
-                            <img src="./assets/images/Conditions/work-injury-pain-300x296.webp" alt="" class="condition-img" width="200" height="200">
+                            <img src="./assets/images/Conditions/work-injury-pain-300x296.webp" alt=""
+                                class="condition-img" width="200" height="200">
                         </span>
-                        <span class="condition-label">Work Injuries</span>
+                        <span class="condition-label">Personal Injuries</span>
                     </a>
                 </div>
             </div>
@@ -162,11 +162,14 @@
 
         <section class="conditions-cta" aria-label="Call to action">
             <div class="conditions-cta-inner">
-                <p class="conditions-cta-mission">Our Mission is to Improve Your Health and Quality of Life Without Medications or Surgery.</p>
+                <p class="conditions-cta-mission">Our Mission is to Improve Your Health and Quality of Life Without
+                    Medications or Surgery.</p>
                 <h2 class="conditions-cta-headline">See How We Can Help You Today!</h2>
                 <div class="conditions-cta-buttons">
-                    <a href="#" class="conditions-cta-btn"><i class="fa fa-calendar" aria-hidden="true"></i> Request a Consultation</a>
-                    <a href="tel:636-492-1528" class="conditions-cta-btn"><i class="fa fa-phone" aria-hidden="true"></i> Call Us</a>
+                    <a href="#" class="conditions-cta-btn"><i class="fa fa-calendar" aria-hidden="true"></i> Request a
+                        Consultation</a>
+                    <a href="tel:636-492-1528" class="conditions-cta-btn"><i class="fa fa-phone" aria-hidden="true"></i>
+                        Call Us</a>
                 </div>
             </div>
         </section>
