--- a/index.html
+++ b/index.html
@@ -36,15 +36,13 @@
                     <a href="./conditions.html" class="nav-link-item nav-link-with-arrow">Conditions</a>
                     <ul class="dropdown-menu">
                         <li class="dropdown-item-has-children">
-                            <a href="#">Back Pain</a>
-                            <a href="#">Neck Pain</a>
-                            <a href="#">Shoulder Pain</a>
-                            <a href="#">Sciatica</a>
-                            <a href="#">Bulging Disc</a>
-                            <a href="#">Migraine</a>
-                            <a href="#">Chiropractor</a>
-                            <a href="#">Pinched Nerve</a>
-                            <a href="#">View More Conditions</a>
+                            <a href="./conditions/headaches.html">Migraine</a>
+                            <a href="./conditions/back-pain.html">Back Pain</a>
+                            <a href="./conditions/joint-pain.html">Joint Pain</a>
+                            <a href="./conditions/neck-pain.html">Neck Pain</a>
+                            <a href="./conditions/nerve-pain.html">Nerve Pain</a>
+                            <a href="#">Personal Injuries</a>
+                            <a href="./conditions.html">View More Conditions</a>
                         </li>
                     </ul>
                 </li>
@@ -120,24 +118,6 @@
     </header>
 
     <main>
-        <section class="hero-section" aria-label="Hero">
-            <div class="hero-slideshow swiper">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide hero-slide" style="background-image: url(./assets/images/home-hero-slideshow/home-hero-bg.jpg);"></div>
-                    <div class="swiper-slide hero-slide" style="background-image: url(./assets/images/home-hero-slideshow/2266490.jpg);"></div>
-                    <div class="swiper-slide hero-slide" style="background-image: url(./assets/images/home-hero-slideshow/2266493.jpg);"></div>
-                    <div class="swiper-slide hero-slide" style="background-image: url(./assets/images/home-hero-slideshow/2266494.jpg);"></div>
-                </div>
-            </div>
-            <div class="hero-overlay">
-                <div class="hero-content">
-                    <h1 class="hero-heading">All Things Physical Health Under One Roof</h1>
-                    <p class="hero-description">Let our team of experts identify the root problem and solution to eliminate your pain for good.</p>
-                    <a href="#" class="section-btn section-btn-green">Book a free consultation</a>
-                </div>
-            </div>
-        </section>
-
         <!-- Statistics Bar -->
         <section class="stats-bar" aria-label="Practice statistics">
             <div class="stats-inner">
@@ -159,6 +139,28 @@
                 </div>
             </div>
         </section>
+        <section class="hero-section" aria-label="Hero">
+            <div class="hero-slideshow swiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide hero-slide"
+                        style="background-image: url(./assets/images/home-hero-slideshow/home-hero-bg.jpg);"></div>
+                    <div class="swiper-slide hero-slide"
+                        style="background-image: url(./assets/images/home-hero-slideshow/2266490.jpg);"></div>
+                    <div class="swiper-slide hero-slide"
+                        style="background-image: url(./assets/images/home-hero-slideshow/2266493.jpg);"></div>
+                    <div class="swiper-slide hero-slide"
+                        style="background-image: url(./assets/images/home-hero-slideshow/2266494.jpg);"></div>
+                </div>
+            </div>
+            <div class="hero-overlay">
+                <div class="hero-content">
+                    <h1 class="hero-heading">All Things Physical Health Under One Roof</h1>
+                    <p class="hero-description">Let our team of experts identify the root problem and solution to
+                        eliminate your pain for good.</p>
+                    <a href="#" class="section-btn section-btn-green">Book a free consultation</a>
+                </div>
+            </div>
+        </section>
 
         <!-- Know Options & Affordability -->
         <section class="options-affordability" aria-labelledby="options-heading">
@@ -171,8 +173,11 @@
                             pain at the
                             source.</p>
                     </div>
-                    <div class="options-video" data-youtube-id="SE9E2UcAi1w" data-youtube-start="11" style="background-image: url(https://img.youtube.com/vi/SE9E2UcAi1w/sddefault.jpg);" aria-label="Video: Patient treatment demonstration">
-                        <button class="video-play-btn" aria-label="Play video" type="button"><i class="fa fa-play" aria-hidden="true"></i></button>
+                    <div class="options-video" data-youtube-id="SE9E2UcAi1w" data-youtube-start="11"
+                        style="background-image: url(https://img.youtube.com/vi/SE9E2UcAi1w/sddefault.jpg);"
+                        aria-label="Video: Patient treatment demonstration">
+                        <button class="video-play-btn" aria-label="Play video" type="button"><i class="fa fa-play"
+                                aria-hidden="true"></i></button>
                     </div>
                     <a href="#" class="section-btn section-btn-green">Book a free consultation</a>
                 </article>
@@ -215,8 +220,8 @@
                     <p>Includes a full Exam, X-Rays (if needed), & First Treatment.</p>
                     <a href="./new-patient.html" class="section-btn section-btn-green">Claim Offer</a>
                 </article>
-                <div class="special-image" style="background-image: url(./assets/images/New\ Patient\ Special.jpg);" role="img"
-                    aria-label="Doctor examining X-ray"></div>
+                <div class="special-image" style="background-image: url(./assets/images/New\ Patient\ Special.jpg);"
+                    role="img" aria-label="Doctor examining X-ray"></div>
             </div>
         </section>
 
@@ -254,8 +259,8 @@
                     <span class="location-name">Redondo Beach</span>
                 </a>
                 <a href="#" class="location-card">
-                    <div class="location-image" style="background-image: url(./assets/images/torrance.webp);"
-                        role="img" aria-label="Torrance location"></div>
+                    <div class="location-image" style="background-image: url(./assets/images/torrance.webp);" role="img"
+                        aria-label="Torrance location"></div>
                     <span class="location-name">Torrance</span>
                 </a>
                 <a href="#" class="location-card">
@@ -379,8 +384,12 @@
             <div class="footer-stay-connected">
                 <h3 class="footer-heading">Stay Connected</h3>
                 <p class="footer-desc">Join our weekly blog & newsletter for tips on healthy living</p>
-                <iframe id="newsletter-submit-frame" name="newsletter-submit-frame" title="Newsletter submit" class="visually-hidden" style="position:absolute;width:0;height:0;border:0" aria-hidden="true"></iframe>
-                <form class="footer-newsletter" id="footer-newsletter-form" aria-label="Newsletter signup" method="POST" action="https://script.google.com/macros/s/AKfycbyFbXHG9rn8VfWbxLZWqlentpgO4SIb4fANbTzsh9Xp5vWO9jJciXWX4abEdruU1llq/exec" target="newsletter-submit-frame">
+                <iframe id="newsletter-submit-frame" name="newsletter-submit-frame" title="Newsletter submit"
+                    class="visually-hidden" style="position:absolute;width:0;height:0;border:0"
+                    aria-hidden="true"></iframe>
+                <form class="footer-newsletter" id="footer-newsletter-form" aria-label="Newsletter signup" method="POST"
+                    action="https://script.google.com/macros/s/AKfycbyFbXHG9rn8VfWbxLZWqlentpgO4SIb4fANbTzsh9Xp5vWO9jJciXWX4abEdruU1llq/exec"
+                    target="newsletter-submit-frame">
                     <label for="footer-email" class="visually-hidden">Email</label>
                     <input type="email" id="footer-email" name="Email" class="footer-email-input"
                         placeholder="Enter your email" required>
