--- a/new-patient.html
+++ b/new-patient.html
@@ -39,15 +39,13 @@
                     <a href="./conditions.html" class="nav-link-item nav-link-with-arrow">Conditions</a>
                     <ul class="dropdown-menu">
                         <li class="dropdown-item-has-children">
-                            <a href="#">Back Pain</a>
-                            <a href="#">Neck Pain</a>
-                            <a href="#">Shoulder Pain</a>
-                            <a href="#">Sciatica</a>
-                            <a href="#">Bulging Disc</a>
-                            <a href="#">Migraine</a>
-                            <a href="#">Chiropractor</a>
-                            <a href="#">Pinched Nerve</a>
-                            <a href="#">View More Conditions</a>
+                            <a href="./conditions/headaches.html">Migraine</a>
+                            <a href="./conditions/back-pain.html">Back Pain</a>
+                            <a href="./conditions/joint-pain.html">Joint Pain</a>
+                            <a href="./conditions/neck-pain.html">Neck Pain</a>
+                            <a href="./conditions/nerve-pain.html">Nerve Pain</a>
+                            <a href="#">Personal Injuries</a>
+                            <a href="./conditions.html">View More Conditions</a>
                         </li>
                     </ul>
                 </li>
