Updated header and meta data for service pages

--- a/conditions.html
+++ b/conditions.html
@@ -49,22 +49,22 @@
                             <ul class="dropdown-submenu">
                                 <li><a href="#">Digital X-Rays</a></li>
                                 <li><a href="#">Posture Correction</a></li>
-                                <li><a href="#">Non-Surgical Spinal Decompression</a></li>
+                                <li><a href="./services/spinal-decompression.html">Non-Surgical Spinal Decompression</a></li>
                             </ul>
                         </li>
                         <li class="dropdown-item-has-children"><a href="#">Pain Management</a>
                             <ul class="dropdown-submenu">
-                                <li><a href="#">Botox for migraines</a></li>
-                                <li><a href="#">Dekompressor Discectomy</a></li>
-                                <li><a href="#">Discography</a></li>
-                                <li><a href="#">Facet Joint Injections</a></li>
-                                <li><a href="#">Kyphoplasty</a></li>
-                                <li><a href="#">Lumbar Sympathetic Block</a></li>
-                                <li><a href="#">Manipulation Under Anesthesia</a></li>
-                                <li><a href="#">Pulsed Radiofrequency Treatment</a></li>
-                                <li><a href="#">RACZ Caudal Neurolysis</a></li>
-                                <li><a href="#">Selective Nerve Root Block</a></li>
-                                <li><a href="#">Transforaminal Epidural Injection</a></li>
+                                <li><a href="./services/botox-for-migraines.html">Botox for migraines</a></li>
+                                <li><a href="./services/dekompressor.html">Dekompressor Discectomy</a></li>
+                                <li><a href="./services/discography.html">Discography</a></li>
+                                <li><a href="./services/facet-joint-injections.html">Facet Joint Injections</a></li>
+                                <li><a href="./services/joint-injections.html">Kyphoplasty</a></li>
+                                <li><a href="./services/lumbar-sympathetic.html">Lumbar Sympathetic Block</a></li>
+                                <li><a href="./services/mua.html">Manipulation Under Anesthesia</a></li>
+                                <li><a href="./services/radiofrequency-ablation.html">Pulsed Radiofrequency Treatment</a></li>
+                                <li><a href="./services/racz-caudal.html">RACZ Caudal Neurolysis</a></li>
+                                <li><a href="./services/selective-nerve.html">Selective Nerve Root Block</a></li>
+                                <li><a href="./services/transforminal-epidural.html">Transforaminal Epidural Injection</a></li>
                             </ul>
                         </li>
                         <li class="dropdown-item-has-children"><a href="#">Physical Medicine</a>
@@ -73,7 +73,7 @@
                                 <li><a href="#">Diagnostic testing</a></li>
                                 <li><a href="#">Food sensitivity testing</a></li>
                                 <li><a href="#">K-laser - Class IV - Cold laser</a></li>
-                                <li><a href="#">Spinal decompression therapy</a></li>
+                                <li><a href="./services/spinal-decompression.html">Spinal decompression therapy</a></li>
                                 <li><a href="#">Trigger point injections</a></li>
                             </ul>
                         </li>
@@ -81,8 +81,8 @@
                         <li class="dropdown-item-has-children"><a href="#">Medical Weight Loss</a></li>
                         <li class="dropdown-item-has-children"><a href="#">Regenerative</a>
                             <ul class="dropdown-submenu">
-                                <li><a href="#">Platelet rich plasma therapy</a></li>
-                                <li><a href="#">Viscosupplementation joint therapy</a></li>
+                                <li><a href="./services/platelet-rich-plasma.html">Platelet rich plasma therapy</a></li>
+                                <li><a href="./services/viscosupplementation.html">Viscosupplementation joint therapy</a></li>
                             </ul>
                         </li>
                         <li class="dropdown-item-has-children"><a href="#">Massage Therapy</a></li>
