--- a/services/selective-nerve.html
+++ b/services/selective-nerve.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Back pain treatment at Goodlife Physical Medicine & Chiropractic. Chiropractic care, spinal decompression, and integrated therapies. South Bay Los Angeles."
+      content="Selective nerve root block (SNRB) at Goodlife Physical Medicine. Diagnostic and therapeutic relief for nerve pain. South Bay Los Angeles."
     />
     <meta
       name="keywords"
-      content="back pain treatment, chiropractic, spinal decompression, Goodlife, physical medicine, South Bay Los Angeles"
+      content="selective nerve root block, SNRB, nerve pain, radiculopathy, Goodlife, physical medicine, South Bay Los Angeles"
     />
     <link
       rel="stylesheet"
@@ -21,7 +21,7 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
     <title>
-      Back Pain Treatment | Goodlife Physical Medicine & Chiropractic
+      Selective Nerve Root Block (SNRB) | Goodlife Physical Medicine & Chiropractic
     </title>
     <link rel="stylesheet" href="../css/index.css" />
     <link rel="stylesheet" href="../css/home.css" />
