--- a/conditions/nerve-pain.html
+++ b/conditions/nerve-pain.html
@@ -70,58 +70,71 @@
             </ul>
           </li>
           <li class="nav-item-dropdown">
-            <a href="#" class="nav-link-item nav-link-with-arrow">Services</a>
+            <a href="../services.html" class="nav-link-item nav-link-with-arrow">Services</a>
             <ul class="dropdown-menu">
               <li class="dropdown-item-has-children">
                 <a href="#">Chiropractic</a>
-                <ul class="dropdown-submenu">
-                  <li><a href="#">Digital X-Rays</a></li>
-                  <li><a href="#">Posture Correction</a></li>
-                  <li><a href="../services/spinal-decompression.html">Non-Surgical Spinal Decompression</a></li>
-                </ul>
-              </li>
-              <li class="dropdown-item-has-children">
-                <a href="#">Pain Management</a>
-                <ul class="dropdown-submenu">
-                  <li><a href="../services/botox-for-migraines.html">Botox for migraines</a></li>
-                  <li><a href="../services/dekompressor.html">Dekompressor Discectomy</a></li>
-                  <li><a href="../services/discography.html">Discography</a></li>
-                  <li><a href="../services/facet-joint-injections.html">Facet Joint Injections</a></li>
-                  <li><a href="../services/joint-injections.html">Kyphoplasty</a></li>
-                  <li><a href="../services/lumbar-sympathetic.html">Lumbar Sympathetic Block</a></li>
-                  <li><a href="../services/mua.html">Manipulation Under Anesthesia</a></li>
-                  <li><a href="../services/radiofrequency-ablation.html">Pulsed Radiofrequency Treatment</a></li>
-                  <li><a href="../services/racz-caudal.html">RACZ Caudal Neurolysis</a></li>
-                  <li><a href="../services/selective-nerve.html">Selective Nerve Root Block</a></li>
-                  <li><a href="../services/transforminal-epidural.html">Transforaminal Epidural Injection</a></li>
-                </ul>
-              </li>
-              <li class="dropdown-item-has-children">
-                <a href="#">Physical Medicine</a>
-                <ul class="dropdown-submenu">
-                  <li><a href="#">Allergy testing</a></li>
-                  <li><a href="#">Diagnostic testing</a></li>
-                  <li><a href="#">Food sensitivity testing</a></li>
-                  <li><a href="#">K-laser - Class IV - Cold laser</a></li>
-                  <li><a href="../services/spinal-decompression.html">Spinal decompression therapy</a></li>
-                  <li><a href="#">Trigger point injections</a></li>
-                </ul>
               </li>
               <li class="dropdown-item-has-children">
                 <a href="#">Physical Therapy</a>
               </li>
               <li class="dropdown-item-has-children">
-                <a href="#">Medical Weight Loss</a>
-              </li>
-              <li class="dropdown-item-has-children">
-                <a href="#">Regenerative</a>
+                <a href="#">Evaluations & Diagnoses</a>
                 <ul class="dropdown-submenu">
-                  <li><a href="../services/platelet-rich-plasma.html">Platelet rich plasma therapy</a></li>
-                  <li><a href="../services/viscosupplementation.html">Viscosupplementation joint therapy</a></li>
+                  <li><a href="#">Digital X-rays</a></li>
+                  <li><a href="#">MRI</a></li>
+                  <li><a href="#">Ultrasound</a></li>
+                  <li><a href="#">Allergy testing</a></li>
+                  <li><a href="#">Food sensitivity testing</a></li>
                 </ul>
               </li>
               <li class="dropdown-item-has-children">
-                <a href="#">Massage Therapy</a>
+                <a href="#">Level 1 treatments: Conservative Care</a>
+                <ul class="dropdown-submenu">
+                  <li><a href="#">Chiropractic care & posture correction</a></li>
+                  <li><a href="#">Physical therapy</a></li>
+                  <li><a href="#">Massage therapy</a></li>
+                  <li><a href="#">K-Laser (Class IV laser therapy)</a></li>
+                  <li><a href="#">Trigger point injections</a></li>
+                  <li><a href="#">Spinal decompression therapy</a></li>
+                </ul>
+              </li>
+              <li class="dropdown-item-has-children">
+                <a href="#">Level 2 treatments: Interventional Care</a>
+                <ul class="dropdown-submenu">
+                  <li><a href="../services/transforminal-epidural.html">Transforaminal epidural injections</a></li>
+                  <li><a href="../services/facet-joint-injections.html">Facet joint injections</a></li>
+                  <li><a href="../services/botox-for-migraines.html">Botox for migraines - Botulotoxin Dystonia</a></li>
+                  <li><a href="../services/mua.html">Manipulation under anesthesia (MUA)</a></li>
+                  <li><a href="../services/platelet-rich-plasma.html">Platelet-rich plasma (PRP) therapy</a></li>
+                  <li><a href="../services/joint-injections.html">Joint Injections</a></li>
+                  <li><a href="../services/spinal-cord.html">Spinal cord stimulation</a></li>
+                  <li><a href="../services/radiofrequency-ablation.html">Radiofrequency ablation</a></li>
+                  <li><a href="../services/venefit.html">Venefit</a></li>
+                  <li><a href="../services/viscosupplementation.html">Viscosupplementation (joint therapy)</a></li>
+                  <li><a href="../services/selective-nerve.html">Selective nerve root blocks</a></li>
+                  <li><a href="../services/lumbar-sympathetic.html">Lumbar sympathetic block</a></li>
+                  <li><a href="../services/racz-caudal.html">Racz caudal neurolysis</a></li>
+                </ul>
+              </li>
+              <li class="dropdown-item-has-children">
+                <a href="#">Level 3 treatments: Orthopedic Care</a>
+                <ul class="dropdown-submenu">
+                  <li><a href="#">Knee Replacement</a></li>
+                  <li><a href="#">Hip Replacement</a></li>
+                  <li><a href="#">Shoulder Repair</a></li>
+                  <li><a href="../services/dekompressor.html">Dekompressor® discectomy</a></li>
+                  <li><a href="../services/discography.html">Discography</a></li>
+                </ul>
+              </li>
+              <li class="dropdown-item-has-children">
+                <a href="#">Medical Weight Loss</a>
+              </li>
+              <li class="dropdown-item-has-children">
+                <a href="#">Varicose Veins</a>
+              </li>
+              <li class="dropdown-item-has-children">
+                <a href="#">B-12 Shots</a>
               </li>
             </ul>
           </li>
@@ -213,7 +226,7 @@
               <div class="arrow-left-h"></div>
             </div>
             <div class="healing-roadmap-card level-2">
-              Level 2:<br />Targeted Relief<br />+ Regenerative Medicine
+              Level 2:<br />INTERVENTIONAL CARE<br />+ Regenerative Medicine
             </div>
             <div class="healing-roadmap-arrow-pair" aria-hidden="true">
               <div class="arrow-right-h"></div>
@@ -296,7 +309,7 @@
 
           <!-- Level 2 Carousel -->
           <div class="conditions-level-block level-2">
-            <h4 class="level-slide-title">Level 2 Treatments: Targeted Relief</h4>
+            <h4 class="level-slide-title">Level 2 Treatments: INTERVENTIONAL CARE</h4>
             <p class="level-slide-desc">Targeted treatments to calm inflammation and nerve irritation.</p>
             <div class="slider-row">
               <button class="slider-arrow slider-prev carousel-prev" aria-label="Previous service cards">
